--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aio-pika==9.5.5
 aioboto3==14.1.0
 aiobotocore==2.21.1
 aiofiles==24.1.0
@@ -5,6 +6,7 @@ aiogram==3.19.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aioitertools==0.12.0
+aiormq==6.8.1
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
@@ -15,6 +17,7 @@ botocore==1.37.1
 certifi==2025.1.31
 click==8.1.8
 colorama==0.4.6
+exceptiongroup==1.2.2
 fastapi==0.115.12
 frozenlist==1.5.0
 greenlet==3.1.1
@@ -22,7 +25,9 @@ h11==0.14.0
 idna==3.10
 jmespath==1.0.1
 magic-filter==1.0.12
+msgpack==1.1.0
 multidict==6.3.2
+pamqp==3.3.0
 propcache==0.3.1
 pydantic==2.10.6
 pydantic-settings==2.8.1
