--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,19 @@ services:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
 
+  redis:
+    image: redis:7.2-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --save 60 1 --loglevel warning
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   rabbitmq:
     image: rabbitmq:3.13.7-management
     ports:
@@ -40,7 +53,13 @@ services:
       - "8080:8001"
     depends_on:
       - db
+      - redis
     env_file:
       - ./config/.env
     environment:
       - PYTHONPATH=/code
+    volumes:
+      - .:/code
+
+volumes:
+  redis_data:
