--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ aiogram==3.19.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aioitertools==0.12.0
+aioredis==2.0.1
 aiormq==6.8.1
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
 asyncpg==0.30.0
 attrs==25.3.0
 boto3==1.37.1
@@ -34,6 +36,7 @@ pydantic-settings==2.8.1
 pydantic_core==2.27.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+redis==5.2.1
 s3transfer==0.11.3
 six==1.17.0
 sniffio==1.3.1
